--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "mocha": "^3.0.2"
   },
   "scripts": {
-  	"test": "node_modules/mocha/bin/mocha tests --debug"
+    "test": "node_modules/mocha/bin/mocha tests --debug"
+  },
+  "dependencies": {
+    "isnumber": "^1.0.0"
   }
 }
